Support elicitation decline
